// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default button style default should match snapshot 1`] = `
.c0 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: arial;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:active {
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-name: click;
  animation-name: click;
  -webkit-animation-timing-function: ease-in;
  animation-timing-function: ease-in;
}

<div>
  <button
    class="c0"
    kind="primary"
  />
</div>
`;

exports[`Default button style default with optional props should match snapshot 1`] = `
.c0 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: arial;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 {
  cursor: not-allowed;
  opacity: 0.6;
}

.c0 {
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
}

.c0:active {
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-name: click;
  animation-name: click;
  -webkit-animation-timing-function: ease-in;
  animation-timing-function: ease-in;
}

<div>
  <button
    class="c0"
    disabled=""
    kind="primary"
  />
</div>
`;
